--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   background-color: hsl(222deg, 26%, 31%);
   text-transform: uppercase;
   color: #f3f3f3;
+  transition: 1s background ease-out;
 }
 
 main {
@@ -100,6 +101,7 @@ main {
   color: #f3f3f3;
   text-align: right;
   font-family: "League Spartan", sans-serif;
+  transition: 1s background ease-out;
 }
 
 /* later render this using the scss */
@@ -178,13 +180,13 @@ main {
   color: hsl(221deg, 14%, 31%);
   font-size: 25px;
   font-weight: bold;
-  transition: all 1s ease-out;
+  transition: 1s background ease-out;
   width: 70px;
   height: 40px;
   box-shadow: 0px 3px hsl(28deg, 16%, 65%);
 }
 .button:hover {
-  background-color: #f3f3f3;
+  background: #f3f3f3;
 }
 
 .equal {
